--- a/docs/pyside/_static/pysidedocs.css
+++ b/docs/pyside/_static/pysidedocs.css
@@ -83,7 +83,7 @@ strong {
     border-left: 1px solid #989898;
     font-size:18px;
     padding: 10px 50px 15px 50px;
-    height: 100%;
+    /*height: 100%;*/
 }
 
 h1 {
